Introduce osre folder in vs-filter-structure for includes.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -470,26 +470,26 @@ SOURCE_GROUP( Resources           FILES ${resources_src} )
 SOURCE_GROUP( Scene               FILES ${scene_src} )
 SOURCE_GROUP( Threading           FILES ${threading_src} )
 SOURCE_GROUP( UI                  FILES ${ui_src} )
-SOURCE_GROUP( Include\\App        FILES ${app_inc} )
-SOURCE_GROUP( Include\\Assets     FILES ${assets_inc} )
-SOURCE_GROUP( Include\\Debugging  FILES ${debugging_inc} )
-SOURCE_GROUP( Include\\Common     FILES ${common_inc} )
-SOURCE_GROUP( Include\\Debugging  FILES ${debugging_inc} )
-SOURCE_GROUP( Include\\System     FILES ${system_inc} )
-SOURCE_GROUP( Include\\Utils      FILES ${utils_inc} )
-SOURCE_GROUP( Include\\IO         FILES ${io_inc} )
-SOURCE_GROUP( Include\\Math          FILES ${math_inc} )
-SOURCE_GROUP( Include\\Memory        FILES ${memory_inc} )
-SOURCE_GROUP( Include\\Properties    FILES ${properties_inc} )
-SOURCE_GROUP( Include\\Platform      FILES ${platform_inc} )
-SOURCE_GROUP( Include\\Platform\\Windows FILES ${platform_win_inc} )
-SOURCE_GROUP( Include\\Profiling     FILES ${profiling_inc} )
-SOURCE_GROUP( Include\\Resources     FILES ${resources_inc} )
-SOURCE_GROUP( Include\\RenderBackend FILES ${renderbackend_inc} )
-SOURCE_GROUP( Include\\Scene         FILES ${scene_inc} )
-SOURCE_GROUP( Include\\Scripting     FILES ${scripting_mono_inc} )
-SOURCE_GROUP( Include\\Threading     FILES ${threading_inc} )
-SOURCE_GROUP( Include\\UI            FILES ${ui_inc} )
+SOURCE_GROUP( Include\\osre\\App        FILES ${app_inc} )
+SOURCE_GROUP( Include\\osre\\Assets     FILES ${assets_inc} )
+SOURCE_GROUP( Include\\osre\\Debugging  FILES ${debugging_inc} )
+SOURCE_GROUP( Include\\osre\\Common     FILES ${common_inc} )
+SOURCE_GROUP( Include\\osre\\Debugging  FILES ${debugging_inc} )
+SOURCE_GROUP( Include\\osre\\System     FILES ${system_inc} )
+SOURCE_GROUP( Include\\osre\\Utils      FILES ${utils_inc} )
+SOURCE_GROUP( Include\\osre\\IO         FILES ${io_inc} )
+SOURCE_GROUP( Include\\osre\\Math          FILES ${math_inc} )
+SOURCE_GROUP( Include\\osre\\Memory        FILES ${memory_inc} )
+SOURCE_GROUP( Include\\osre\\Properties    FILES ${properties_inc} )
+SOURCE_GROUP( Include\\osre\\Platform      FILES ${platform_inc} )
+SOURCE_GROUP( Include\\osre\\Platform\\Windows FILES ${platform_win_inc} )
+SOURCE_GROUP( Include\\osre\\Profiling     FILES ${profiling_inc} )
+SOURCE_GROUP( Include\\osre\\Resources     FILES ${resources_inc} )
+SOURCE_GROUP( Include\\osre\\RenderBackend FILES ${renderbackend_inc} )
+SOURCE_GROUP( Include\\osre\\Scene         FILES ${scene_inc} )
+SOURCE_GROUP( Include\\osre\\Scripting     FILES ${scripting_mono_inc} )
+SOURCE_GROUP( Include\\osre\\Threading     FILES ${threading_inc} )
+SOURCE_GROUP( Include\\osre\\UI            FILES ${ui_inc} )
 
 SOURCE_GROUP( Documentation          FILES ${doc_inc} )
 
