refactoring: move world to app.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -46,6 +46,7 @@ SET( app_inc
     ${HEADER_PATH}/App/AssetRegistry.h
     ${HEADER_PATH}/App/AssetDataArchive.h
     ${HEADER_PATH}/App/AssimpWrapper.h
+    ${HEADER_PATH}/App/World.h
 )
 
 SET( app_src
@@ -57,6 +58,7 @@ SET( app_src
     App/AssetRegistry.cpp
     App/AssetDataArchive.cpp
     App/AssimpWrapper.cpp
+    App/World.cpp
 )
 
 #==============================================================================
@@ -303,7 +305,6 @@ SET( scene_inc
     ${HEADER_PATH}/Scene/Stage.h
     ${HEADER_PATH}/Scene/TrackBall.h
     ${HEADER_PATH}/Scene/View.h
-    ${HEADER_PATH}/Scene/World.h
     ${HEADER_PATH}/Scene/LineBuilder.h
     ${HEADER_PATH}/Scene/TAABB.h
     ${HEADER_PATH}/Scene/TQuadTree.h
@@ -319,7 +320,6 @@ SET( scene_src
     Scene/Stage.cpp
     Scene/TrackBall.cpp
     Scene/View.cpp
-    Scene/World.cpp
     Scene/ParticleEmitter.cpp
 )
 
