separation of ui-styles.

--- a/src/Editor_cpp/CMakeLists.txt
+++ b/src/Editor_cpp/CMakeLists.txt
@@ -9,6 +9,10 @@ SET( inspector_module_src
     src/Modules/InspectorModule/InspectorModule.h
 )
 
+SET( log_module_src
+    src/Modules/LogModule/LogModule.h
+    src/Modules/LogModule/LogModule.cpp
+)
 SET( modules_src 
     src/Modules/IModuleView.h
     src/Modules/ModuleBase.cpp
@@ -22,11 +26,13 @@ SET( scripting_src
 )
 
 SOURCE_GROUP( Modules\\InspectorModule FILES ${inspector_module_src} )
+SOURCE_GROUP( Modules\\LogModule       FILES ${log_module_src} )
 SOURCE_GROUP( Modules\\                FILES ${modules_src} )
 SOURCE_GROUP( Scripting\\              FILES ${scripting_src} )
 
 ADD_EXECUTABLE( osre_ed
     ${inspector_module_src}
+    ${log_module_src}
     ${modules_src}
     ${scripting_src}
     src/OsreEdApp.cpp
