closes https://github.com/kimkulling/osre/issues/64 : Introduction of border rendering.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -471,6 +471,7 @@ SOURCE_GROUP( Resources           FILES ${resources_src} )
 SOURCE_GROUP( Scene               FILES ${scene_src} )
 SOURCE_GROUP( Threading           FILES ${threading_src} )
 SOURCE_GROUP( UI                  FILES ${ui_src} )
+SOURCE_GROUP( UI\\Common          FILES ${ui_common_src} )
 
 SOURCE_GROUP( Include\\osre\\App        FILES ${app_inc} )
 SOURCE_GROUP( Include\\osre\\Assets     FILES ${assets_inc} )
@@ -492,7 +493,6 @@ SOURCE_GROUP( Include\\osre\\Scene             FILES ${scene_inc} )
 SOURCE_GROUP( Include\\osre\\Scripting         FILES ${scripting_mono_inc} )
 SOURCE_GROUP( Include\\osre\\Threading         FILES ${threading_inc} )
 SOURCE_GROUP( Include\\osre\\UI                FILES ${ui_inc} )
-SOURCE_GROUP( Include\\osre\\UI\\Common        FILES ${ui_common_src} )
 SOURCE_GROUP( Include\\osre\\UI\\Ingame        FILES ${ui_ingame_src} )
 SOURCE_GROUP( Include\\osre\\UI\\WinManager    FILES ${ui_winmanager_src} )
 SOURCE_GROUP( Documentation                    FILES ${doc_inc} )
