--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,12 @@ before_install:
 install:
   - sudo apt-get install cmake
   - sudo apt-get install doxygen graphviz
-  - sudo apt-get install -qq libsdl2-dev gcc-4.8
-  - sudo apt-get install g++-4.8
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+  - sudo apt-get install -qq libsdl2-dev 
 
 language: cpp
 compiler:
   - gcc
-    #- clang
+  - clang
 
 script:
   - . ./.travis.sh
