--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,10 +118,6 @@ ENDIF()
 
 add_definitions( -DGLM_ENABLE_EXPERIMENTAL )
 
-# Configuring assimp
-set( BUILD_SHARED_LIBS OFF )
-set( ASSIMP_BUILD_ZLIB ON )
-
 # Include all sub directories of the engine code component
 ADD_SUBDIRECTORY( src/Engine )
 ADD_SUBDIRECTORY( src/Editor_cpp )
@@ -142,6 +138,7 @@ ADD_SUBDIRECTORY( 3dparty/zlib )
 ADD_SUBDIRECTORY( 3dparty/unzip )
 ADD_SUBDIRECTORY( 3dparty/soil )
 set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "no assimp tools")
+set( ASSIMP_BUILD_ZLIB On CACHE BOOL "no assimp tools" )
 ADD_SUBDIRECTORY( 3dparty/assimp )
 ADD_SUBDIRECTORY( 3dparty/jsoncpp-1.8.4 )
 
