--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set ( OSRE_VERSION_MINOR 1 )
 set ( OSRE_VERSION_PATCH 0 )
 set ( OSRE_VERSION ${OSRE_VERSION_MAJOR}.${OSRE_VERSION_MINOR}.${OSRE_VERSION_PATCH} )
 set ( PROJECT_VERSION "${OSRE_VERSION}" )
+set_property( GLOBAL PROPERTY CXX_STANDARD 11 )
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/3dparty/assimp/cmake-modules/")
 message(${CMAKE_MODULE_PATH})
