--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,8 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        token: ${{ secrets.MY_REPO_PAT }}
-        submodules: recursive
+        submodules: true
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
