--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,8 +20,8 @@ jobs:
         submodules: true
 
     - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
+      working-directory: ${{runner.workspace}}/.
+      shell: bash
       run: cmake CMakeLists.txt 
 
     - name: Build
