rename files view to camera.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -285,7 +285,7 @@ SET( scene_inc
     ${HEADER_PATH}/Scene/MaterialBuilder.h
     ${HEADER_PATH}/Scene/Node.h
     ${HEADER_PATH}/Scene/TrackBall.h
-    ${HEADER_PATH}/Scene/View.h
+    ${HEADER_PATH}/Scene/Camera.h
     ${HEADER_PATH}/Scene/LineBuilder.h
     ${HEADER_PATH}/Scene/TAABB.h
     ${HEADER_PATH}/Scene/TQuadTree.h
@@ -299,7 +299,7 @@ SET( scene_src
     Scene/MaterialBuilder.cpp
     Scene/Node.cpp
     Scene/TrackBall.cpp
-    Scene/View.cpp
+    Scene/Camera.cpp
     Scene/ParticleEmitter.cpp
 )
 
