--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
       run: cmake CMakeLists.txt 
     - name: Install dependencies
       shell: bash
-      run: sudp apt-get update && sudo apt-get install libsdl2-dev 
+      run: sudo apt-get update && sudo apt-get install libsdl2-dev 
       
     - name: Build
       #working-directory: ${{runner.workspace}}/.
